# dgraph-benchmarks

./: README.md
bitmap/: codec.go  go.mod  go.sum  pb.pb.go
donors/kg-donors/: kg-donors.graphql
k-shortest-path/: .gitignore  README.md  docker-compose.yaml  go.mod  go.sum
k-shortest-path/cmd/bench/: kshortest.go  main.go
k-shortest-path/cmd/convert/: main.go
k-shortest-path/cmd/handprobe/: main.go
k-shortest-path/cmd/prepare/: main.go
k-shortest-path/cmd/validate/: main.go
k-shortest-path/internal/client/: client.go  client_test.go
k-shortest-path/internal/compare/: compare.go  compare_test.go
k-shortest-path/internal/ldbc/: parse.go  parse_test.go
k-shortest-path/internal/oracle/: oracle.go  oracle_test.go
k-shortest-path/internal/stats/: stats.go  stats_test.go
k-shortest-path/scripts/: bench.sh  calibrate.sh  download-ldbc.sh  run-pr-comparison.sh
k-shortest-path/scripts/lib/: alpha.sh
neo/: Dockerfile
scripts/: grafana_dashboard.json
twitterdata/: go.mod  go.sum
twitterdata/postprocess/: postprocess.go
twitterdata/stream/: stream.go
vector/beir/: .env.example  .gitignore  README.md  __init__.py  config.py  dgraph_client.py  docker-compose.yml  embeddings.py  evaluate.py  generate_test_query.py  insert_benchmark.py  pyproject.toml  run_benchmark.sh  view_results.py
vector/beir/benchmarks/: README.md  scifact_acceptable.json  scifact_excellent.json
vector/beir/results/: benchmark_results.csv
